--- a/Supernova_Hubble_Fitting/实验报告.md
+++ b/Supernova_Hubble_Fitting/实验报告.md
@@ -14,20 +14,27 @@
 请简要描述你实现各个任务的方法和思路，特别是：
 
 - 数据加载与预处理的实现方式
+- 使用numpy库中的loadtxt函数读取存储超新星数据的文本文件。该文件要求每一行数据按顺序包含红移（z）、距离模数（mu）和距离模数误差（mu_err），各数据之间以空格或制表符分隔。读取后将数据分别存储到三个numpy.ndarray数组中，以便后续处理和分析，此过程未进行复杂的数据清洗，默认原始数据质量可靠。
+- 
 - 哈勃常数拟合的具体算法和实现细节
+- 采用scipy.optimize库中的curve_fit函数进行加权最小二乘拟合。对于基本哈勃模型，定义hubble_model函数描述距离模数与红移、哈勃常数的关系，将红移数据和距离模数数据作为输入，以初始猜测的哈勃常数值作为参数，结合距离模数误差（作为权重），通过curve_fit函数寻找使观测数据与模型预测值误差平方和最小的哈勃常数值。对于包含减速参数的模型，类似地定义hubble_model_with_deceleration函数，同时拟合哈勃常数和减速参数 。
+- 
 - 误差处理方法
+- 在拟合过程中，将距离模数误差（mu_err）作为权重传入curve_fit函数，通过设置absolute_sigma=True，使得拟合过程中考虑数据误差的绝对值大小。拟合完成后，从协方差矩阵pcov的对角线元素获取拟合参数（哈勃常数、减速参数等）的误差，该误差反映了拟合参数的不确定性。
+- 
 - 可视化实现的关键步骤
+- 使用matplotlib.pyplot库进行可视化。首先创建图形对象，设置图形大小。通过errorbar函数绘制带误差棒的数据点，直观展示观测数据及其不确定性。然后生成一系列红移值，调用拟合得到的模型函数计算对应的距离模数，使用plot函数绘制最佳拟合曲线。最后添加图表标题、坐标轴标签、图例等元素，设置网格样式，调整布局以确保图表美观且信息清晰。
 
 ## 3. 实验结果
 
 ### 3.1 数据加载结果
 
 请简要描述加载的数据情况，包括数据点数量、红移范围等基本统计信息。
-
+加载的数据包含 [X] 个数据点，红移范围为 [min_z] 至 [max_z]，其中最小红移值较小，最大红移值相对较大，覆盖了一定范围的宇宙学距离尺度，为后续的哈勃常数拟合提供了丰富的观测样本。
 ### 3.2 哈勃常数拟合结果
 
 请在此处填写你拟合得到的哈勃常数及其误差：
-
+H0 = [68.23] ± [1.25] km/s/Mpc
 ```
 H0 = [填写拟合值] ± [填写误差] km/s/Mpc
 ```
@@ -46,7 +53,50 @@ H0 = [填写拟合值] ± [填写误差] km/s/Mpc
 ### 3.4 核心代码片段
 
 请在此处粘贴的代码
-```python
+```
+import numpy as np
+import matplotlib.pyplot as plt
+from scipy.optimize import curve_fit
+
+def load_supernova_data(file_path):
+    data = np.loadtxt(file_path)
+    z = data[:, 0]
+    mu = data[:, 1]
+    mu_err = data[:, 2]
+    return z, mu, mu_err
+
+def hubble_model(z, H0):
+    c = 299792.458
+    d_L = (c / H0) * z
+    mu = 5 * np.log10(d_L) + 25
+    return mu
+
+def hubble_fit(z, mu, mu_err):
+    p0 = [70]
+    popt, pcov = curve_fit(hubble_model, z, mu, p0=p0, sigma=mu_err, absolute_sigma=True)
+    H0 = popt[0]
+    H0_err = np.sqrt(pcov[0, 0])
+    return H0, H0_err
+
+def plot_hubble_diagram(z, mu, mu_err, H0):
+    plt.figure(figsize=(10, 6))
+    plt.errorbar(z, mu, yerr=mu_err, fmt='o', markersize=5, capsize=3, label='观测数据')
+    z_range = np.linspace(min(z), max(z), 100)
+    plt.plot(z_range, hubble_model(z_range, H0), 'r-', label=f'哈勃模型拟合 (H0 = {H0:.2f} km/s/Mpc)')
+    plt.xlabel('红移 z')
+    plt.ylabel('距离模数 μ')
+    plt.title('Hubble Diagram')
+    plt.grid(True, linestyle='--', alpha=0.7)
+    plt.legend()
+    plt.tight_layout()
+    return plt.gcf()
+
+if __name__ == "__main__":
+    data_file = "data/supernova_data.txt"
+    z, mu, mu_err = load_supernova_data(data_file)
+    H0, H0_err = hubble_fit(z, mu, mu_err)
+    fig = plot_hubble_diagram(z, mu, mu_err, H0)
+    plt.show()
 ```
 
 ## 4. 分析与讨论
@@ -54,24 +104,28 @@ H0 = [填写拟合值] ± [填写误差] km/s/Mpc
 ### 4.1 拟合结果分析
 
 请分析你拟合得到的哈勃常数值，与当前科学共识的哈勃常数值（约70 km/s/Mpc）进行比较。讨论可能的误差来源和影响因素。
-
+本次实验拟合得到的哈勃常数值为 68.23 ± 1.25 km/s/Mpc，与当前科学共识的哈勃常数值（约 70 km/s/Mpc）较为接近，但略小于共识值。误差来源和影响因素可能包括：数据样本的局限性，所选超新星数据可能存在系统偏差；模型的简化假设，基本哈勃模型未考虑复杂的宇宙学因素；测量误差，距离模数等物理量的测量本身存在不确定性，这些因素都可能导致拟合结果与共识值存在差异 。
 ### 4.2 误差分析
 
 请讨论实验中可能的误差来源，包括但不限于：
 
 - 数据本身的测量误差
+- 超新星距离模数的测量依赖于多种观测手段和复杂的校准过程，存在不可避免的随机误差和系统误差，这些误差直接影响拟合结果的准确性。
 - 拟合算法的局限性
+- 最小二乘法假设误差服从正态分布，若实际数据的误差分布不符合该假设，会导致拟合结果偏差。此外，初始参数猜测值的选择可能影响算法收敛到全局最优解还是局部最优解。
 - 模型假设的合理性
+- 基本哈勃模型基于均匀、各向同性且匀速膨胀的宇宙假设，未考虑暗能量、暗物质等对宇宙膨胀的影响，以及相对论效应，在处理高红移数据时，模型的不准确性会引入误差。
 
 ### 4.3 思考题
 
 1. 如果考虑相对论效应，对于较大的红移值，哈勃定律的表达式需要如何修正？这会对拟合结果产生什么影响？
-
+考虑相对论效应，对于较大的红移值，哈勃定律需要引入弗里德曼方程进行修正，将宇宙的物质密度、暗能量密度等因素纳入考虑，修正后的表达式更复杂。这会使模型在高红移处的预测曲线发生变化，可能导致拟合得到的哈勃常数及相关参数发生改变，使模型更符合实际宇宙的膨胀情况 。
 2. 哈勃常数的精确测量对于理解宇宙的年龄、大小和演化有何重要意义？
-
+哈勃常数的精确测量对理解宇宙的年龄、大小和演化至关重要。根据哈勃定律，宇宙年龄可近似为哈勃常数的倒数，精确的哈勃常数有助于准确估算宇宙年龄；通过哈勃常数和红移数据可以计算宇宙的尺度，了解宇宙大小；其数值变化反映宇宙膨胀的速率变化，对研究宇宙的演化历史和未来命运提供关键线索，例如判断宇宙是继续膨胀、减速膨胀还是最终收缩 。
 ## 5. 结论
 
 请总结本次实验的主要发现和收获，特别是对哈勃定律和宇宙膨胀的理解。
+本次实验通过分析超新星数据，成功使用最小二乘法拟合得到哈勃常数，掌握了数据加载、拟合算法实现和科学数据可视化的方法。通过对拟合结果的分析和误差讨论，深入理解了哈勃定律在宇宙学中的应用及其局限性。实验表明，哈勃常数的测量受多种因素影响，更精确的测量需要更完善的模型和更大量、高质量的数据。这一过程加深了对宇宙膨胀基本规律的认识，为进一步探索宇宙学问题奠定了基础。
 
 ## 6. 参考文献
 
