--- a/插值: 原子核中子共振散射数据分析/实验报告.md
+++ b/插值: 原子核中子共振散射数据分析/实验报告.md
@@ -14,10 +14,20 @@
 请简要描述你实现各个任务的方法和思路，特别是：
 
 - 拉格朗日多项式插值的实现方式
+- 拉格朗日插值基于拉格朗日基函数，对于给定的 \(n + 1\) 个数据点 \((x_i, y_i)\)，\(i = 0, 1, \cdots, n\)，插值多项式是基函数的线性组合。实现时，对于每个插值点 x，通过双重循环计算每个基函数 \(L_i(x)\) ，公式为 \(L_i(x)=\prod_{j = 0, j \neq i}^{n}\frac{x - x_j}{x_i - x_j}\) ，然后将基函数与对应 \(y_i\) 相乘并累加，得到插值结果。
 - 三次样条插值的实现方式
+- 利用 scipy.interpolate 库中的 interp1d 函数实现。设置 kind='cubic' 来指定三次样条插值，同时考虑边界条件，设置 bounds_error=False 和 fill_value="extrapolate" ，使函数在处理超出已知数据范围的插值点时能进行外推。
 - 共振峰位置和半高全宽(FWHM)的计算方法
-- 可视化实现的关键步骤
+首先通过 np.argmax 函数找到数据中的峰值位置，即共振峰位置。
+计算峰值的一半作为半高值。
+分别在峰值左侧和右侧寻找第一个小于等于半高值的点，若该点与相邻点的值在半高值两侧，则通过线性插值获取更精确的半高位置，最后计算左右半高位置的差值得到 FWHM。
 
+- 可视化实现的关键步骤
+生成密集的插值点，使用 np.linspace 函数在原始数据的能量范围（0 - 200 MeV）内生成 500 个点。
+调用拉格朗日插值和三次样条插值函数，分别计算在这些插值点上的结果。
+使用 matplotlib.pyplot 库绘制图形，包括原始数据点（用 plt.errorbar 绘制并添加误差棒）、拉格朗日插值曲线和三次样条插值曲线。
+标记共振峰位置（用垂直虚线表示），并在图上标注共振峰能量和 FWHM 值。
+添加图表标题、坐标轴标签和图例，完善图表展示。
 ## 3. 实验结果
 
 ### 3.1 插值结果对比
@@ -25,18 +35,19 @@
 请在此处描述两种插值方法的实现结果：
 
 1. 拉格朗日多项式插值结果：
-   - 插值曲线特征：
-   - 计算得到的共振峰位置：______ MeV
-   - 计算得到的FWHM：______ MeV
+   - 插值曲线特征：曲线在数据点之间波动相对较大，在远离数据点区域可能出现较大偏差。
+   - 计算得到的共振峰位置：__75.0____ MeV
+   - 计算得到的FWHM：__50.0____ MeV
 
 2. 三次样条插值结果：
-   - 插值曲线特征：
-   - 计算得到的共振峰位置：______ MeV
-   - 计算得到的FWHM：______ MeV
+   - 插值曲线特征：曲线相对平滑，在数据点之间过渡自然，没有明显的剧烈波动。
+   - 计算得到的共振峰位置：__75.0____ MeV
+   - 计算得到的FWHM：_____48.0_ MeV
 
 ### 3.2 插值曲线图
 
 请在此处插入你绘制的插值曲线对比图(原始数据点和两种插值曲线)。图表应包含以下元素：
+![7720a4fc6397df05c03efcb3eff4fad7](https://github.com/user-attachments/assets/1423564e-6324-40cd-b05a-d4bb38830801)
 
 - 原始数据点(带误差棒)
 - 拉格朗日插值曲线
@@ -51,28 +62,115 @@
 请在此处粘贴你实现的代码：
 
 ```python
-[STUDENT_CODE_HERE]
+import numpy as np
+import matplotlib.pyplot as plt
+from scipy.interpolate import interp1d
+
+# 实验数据
+energy = np.array([0, 25, 50, 75, 100, 125, 150, 175, 200])  # MeV
+cross_section = np.array([10.6, 16.0, 45.0, 83.5, 52.8, 19.9, 10.8, 8.25, 4.7])  # mb
+error = np.array([9.34, 17.9, 41.5, 85.5, 51.5, 21.5, 10.8, 6.29, 4.14])  # mb
+
+def lagrange_interpolation(x, x_data, y_data):
+    x = np.asarray(x)
+    result = np.zeros_like(x, dtype=float)
+    for i in range(len(x_data)):
+        Li = np.ones_like(x, dtype=float)
+        for j in range(len(x_data)):
+            if i != j:
+                Li *= (x - x_data[j]) / (x_data[i] - x_data[j])
+        result += y_data[i] * Li
+    return result
+
+def cubic_spline_interpolation(x, x_data, y_data):
+    f = interp1d(x_data, y_data, kind='cubic', bounds_error=False, fill_value="extrapolate")
+    return f(x)
+
+def find_peak(x, y):
+    peak_idx = np.argmax(y)
+    peak_x = x[peak_idx]
+    peak_y = y[peak_idx]
+    half_max = peak_y / 2
+    left_idx = np.where(y[:peak_idx] <= half_max)[0]
+    left_idx = left_idx[-1] if len(left_idx) > 0 else 0
+    right_idx = np.where(y[peak_idx:] <= half_max)[0]
+    right_idx = right_idx[0] + peak_idx if len(right_idx) > 0 else len(y) - 1
+    if left_idx < peak_idx and y[left_idx] < half_max < y[left_idx + 1]:
+        t = (half_max - y[left_idx]) / (y[left_idx + 1] - y[left_idx])
+        left_x = x[left_idx] + t * (x[left_idx + 1] - x[left_idx])
+    else:
+        left_x = x[left_idx]
+    if right_idx > peak_idx and y[right_idx - 1] > half_max > y[right_idx]:
+        t = (half_max - y[right_idx]) / (y[right_idx - 1] - y[right_idx])
+        right_x = x[right_idx] + t * (x[right_idx - 1] - x[right_idx])
+    else:
+        right_x = x[right_idx]
+    fwhm = right_x - left_x
+    return peak_x, fwhm
+
+def plot_results():
+    x_interp = np.linspace(0, 200, 500)
+    lagrange_result = lagrange_interpolation(x_interp, energy, cross_section)
+    spline_result = cubic_spline_interpolation(x_interp, energy, cross_section)
+    plt.figure(figsize=(12, 6))
+    plt.errorbar(energy, cross_section, yerr=error, fmt='o', color='black', label='Original Data', capsize=5)
+    plt.plot(x_interp, lagrange_result, '-', label='Lagrange Interpolation')
+    plt.plot(x_interp, spline_result, '--', label='Cubic Spline Interpolation')
+    lagrange_peak, lagrange_fwhm = find_peak(x_interp, lagrange_result)
+    spline_peak, spline_fwhm = find_peak(x_interp, spline_result)
+    plt.axvline(lagrange_peak, color='blue', linestyle=':', alpha=0.5)
+    plt.axvline(spline_peak, color='orange', linestyle=':', alpha=0.5)
+    plt.text(lagrange_peak, max(lagrange_result) * 0.9, 
+             f'Lagrange: E={lagrange_peak:.1f} MeV\nFWHM={lagrange_fwhm:.1f} MeV', 
+             ha='center', va='top', rotation=90, backgroundcolor='w', alpha=0.7)
+    plt.text(spline_peak, max(spline_result) * 0.9, 
+             f'Spline: E={spline_peak:.1f} MeV\nFWHM={spline_fwhm:.1f} MeV', 
+             ha='center', va='top', rotation=90, backgroundcolor='w', alpha=0.7)
+    plt.xlabel('Energy (MeV)')
+    plt.ylabel('Cross Section (mb)')
+    plt.title('Neutron Resonance Scattering Cross Section Analysis')
+    plt.legend()
+    plt.grid(True)
+    plt.show()
+
+if __name__ == "__main__":
+    plot_results()
 ```
 ## 4. 分析与讨论
 ### 4.1 插值方法比较
 请分析两种插值方法的结果差异，讨论：
 
 1. 曲线平滑度比较
-2. 边界行为差异
-3. 计算效率比较
-4. 哪种方法更适合本实验数据？为什么？
+ 三次样条插值得到的曲线平滑度明显优于拉格朗日多项式插值。拉格朗日插值曲线在数据点之间波动较大，而三次样条插值能保证在数据点之间过渡平滑，符合物理数据变化相对连续平滑的特点。
+3. 边界行为差异
+ 拉格朗日插值在边界区域可能出现较大偏差，容易出现龙格现象（在区间端点附近波动剧烈 ）。三次样条插值通过合理设置边界条件，在边界区域也能较好地拟合数据，外推效果相对稳定。
+5. 计算效率比较
+ 一般情况下，高阶拉格朗日多项式插值由于涉及大量的乘法和加法运算（随着数据点增多，计算量增长迅速 ），计算效率低于三次样条插值。三次样条插值利用成熟的数值算法，计算复杂度相对较低，在处理大量数据时更具优势。 
+7. 哪种方法更适合本实验数据？为什么？
+ 三次样条插值更适合本实验数据。因为中子散射截面数据在物理上应该是连续平滑变化的，三次样条插值能更好地反映这种特性，且在边界处理和计算效率上也更有优势。拉格朗日插值的波动特性可能会导致对共振峰等特性的分析产生偏差。
 ### 4.2 共振峰分析
 请讨论你得到的共振峰位置和FWHM结果：
 
 1. 与原始数据峰值位置的比较
-2. 两种插值方法结果的差异
-3. 可能的误差来源
+两种插值方法得到的共振峰位置与原始数据中峰值位置大致相同，说明插值方法在定位共振峰位置上有一定的可靠性。但由于插值曲线对数据的平滑和拟合，与原始离散数据点的峰值位置可能存在细微差异。 
+3. 两种插值方法结果的差异
+拉格朗日插值和三次样条插值得到的共振峰位置相同，但 FWHM 值有差异。这是因为拉格朗日插值曲线的波动导致在计算半高位置时产生了不同的结果，而三次样条插值曲线更平滑，计算的 FWHM 值可能更接近真实情况。
+5. 可能的误差来源
+误差来源包括原始数据的测量误差（由提供的误差数组体现 ），插值方法本身的误差（如拉格朗日插值的波动和边界误差 ），以及在计算半高位置时线性插值的近似误差等。
 ### 4.3 思考题
 1. 对于这种类型的实验数据，为什么三次样条插值通常比高阶多项式插值更合适？
-2. 如果数据点更密集或更稀疏，会对插值结果产生什么影响？
+高阶多项式插值存在龙格现象，在区间端点附近会出现剧烈波动，不能很好地反映物理数据的真实变化趋势。而三次样条插值保证了曲线的二阶导数连续，能更好地拟合连续平滑变化的物理数据，如中子散射截面数据。 从计算效率和稳定性角度，高阶多项式插值计算量随数据点增加迅速增大，且数值稳定性差；三次样条插值计算复杂度相对较低，稳定性好。
+
+3. 如果数据点更密集或更稀疏，会对插值结果产生什么影响？
+数据点更密集：对于拉格朗日插值，虽然能在一定程度上减小波动，但高阶多项式计算量会大幅增加，可能导致计算效率降低和数值稳定性问题。对于三次样条插值，能更精确地捕捉数据变化趋势，插值结果更准确，且计算效率和稳定性影响相对较小。。
+
+数据点更稀疏：拉格朗日插值波动会更明显，可能严重偏离真实数据趋势。三次样条插值由于其平滑特性，仍能给出相对合理的趋势估计，但在数据点间隔较大区域，可能无法准确反映局部细节变化。
 ## 5. 结论
 请总结本次实验的主要发现和收获，特别是：
 
 - 对两种插值方法特点的理解
+- 通过实验，深入理解了拉格朗日多项式插值和三次样条插值的原理和实现。拉格朗日插值简单直观，但存在波动和边界问题，高阶时计算效率低；三次样条插值能保证曲线平滑，边界处理较好，计算效率和稳定性更优。
 - 中子共振散射数据分析的经验
+- 掌握了使用插值方法分析中子共振散射数据的流程，包括插值实现、共振峰特性计算和结果可视化。了解到实验数据存在误差，插值方法的选择对分析结果有重要影响。
 - 插值方法选择对结果分析的影响
+- 合适的插值方法能更准确地反映数据真实特性，如在分析中子散射截面数据时，三次样条插值更能体现数据的平滑变化，对共振峰位置和 FWHM 的计算结果更可靠。在实际数据分析中，需根据数据特点和分析目的合理选择插值方法。
