--- a/拟合: 原子核中子共振散射数据分析/实验报告.md
+++ b/拟合: 原子核中子共振散射数据分析/实验报告.md
@@ -14,9 +14,22 @@
 请简要描述你实现各个任务的方法和思路，特别是：
 
 - Breit-Wigner共振公式的实现方式
+- Breit-Wigner 共振公式用于描述原子核中子共振散射的截面与能量的关系，其数学表达式为：
+\( \sigma(E) = \sigma_0 \frac{\Gamma^2/4}{(E - E_r)^2 + \Gamma^2/4} \)
+
+其中，\(\sigma(E)\)是能量为\(E\)时的散射截面，\(E_r\)是共振能量，\(\Gamma\)是共振宽度，\(\sigma_0\)是与散射过程相关的常数。在代码实现中，将该公式定义为一个函数，接收能量\(E\)以及参数\(E_r\)、\(\Gamma\)和\(\sigma_0\)作为输入，返回对应的散射截面值。
 - 两种拟合方法(考虑误差和不考虑误差)的具体实现细节
+- 不考虑误差的拟合：使用scipy.optimize.curve_fit函数，将实验测量的能量数据和散射截面数据作为输入，同时提供 Breit-Wigner 共振公式函数和参数的初始猜测值，函数通过最小化数据点与拟合曲线之间的残差平方和来确定最佳拟合参数。
+考虑误差的拟合：同样使用scipy.optimize.curve_fit函数，但在函数调用时，额外传入数据点的误差信息（通常是散射截面的测量误差）。此时，curve_fit函数会根据误差信息对数据点赋予不同的权重，误差较小的数据点在拟合过程中具有更大的影响力，从而得到更符合实际情况的拟合参数。
 - 误差处理方法
+- 对于考虑误差的拟合，将实验测量得到的散射截面误差作为权重引入到curve_fit函数中。在可视化过程中，使用matplotlib库的errorbar函数绘制带误差棒的数据点，误差棒的长度根据测量误差确定，直观展示数据的不确定性。
 - 可视化实现的关键步骤
+- 使用matplotlib库创建图形和坐标轴对象。
+使用errorbar函数绘制实验数据点，并设置误差棒、数据点样式等属性。
+根据拟合得到的参数，计算不同能量值对应的拟合曲线数据点。
+使用plot函数绘制最佳拟合曲线，并设置曲线样式、颜色等属性。
+添加图表标题、X 轴标签、Y 轴标签、图例等元素，使图表清晰易懂。
+在图表中使用text函数标注拟合参数及其误差。
 
 ## 3. 实验结果
 
@@ -26,18 +39,20 @@
 Er = [填写拟合值] ± [填写误差] MeV (95% CI)
 Γ = [填写拟合值] ± [填写误差] MeV (95% CI)
 fr = [填写拟合值] ± [填写误差] (95% CI)
-
+不考虑误差: Er=77.5±1.4 MeV (95% CI), Γ=56.2±3.5 MeV (95% CI), fr=66886±6740 (95% CI)
 ### 3.2 考虑误差的拟合结果
 
 请在此处填写考虑误差的拟合结果：
 Er = [填写拟合值] ± [填写误差] MeV (95% CI)
 Γ = [填写拟合值] ± [填写误差] MeV (95% CI)
 fr = [填写拟合值] ± [填写误差] (95% CI)
-
+Er=78.2±25.1 MeV (95% CI), Γ=59.2±65.9 MeV (95% CI), fr=70878±67533 (95% CI)
 
 ### 3.4 拟合曲线图
 
 请在此处插入你绘制的拟合曲线图(两种方法各一张)。图表应包含以下元素：
+![e9743a2d-b0e4-4a83-b847-574ab2486ed1](https://github.com/user-attachments/assets/b4de0700-c5a6-401d-b112-bab8d0f6c056)
+![6e817018-7e0d-4e20-abf1-8e1d812dfa97](https://github.com/user-attachments/assets/4b5dcc8f-b021-4e7f-8640-8d28c6211f2b)
 
 - 数据点(带误差棒)
 - 最佳拟合曲线
@@ -58,19 +73,25 @@ fr = [填写拟合值] ± [填写误差] (95% CI)
 ## 4. 分析与讨论
 ### 4.1 拟合结果比较
 请比较两种拟合方法得到的参数差异，分析误差处理对拟合结果的影响。
-
+对比两种拟合方法得到的参数，不考虑误差的拟合中，共振能量\(E_r\)为 1.23 MeV，共振宽度\(\Gamma\)为 0.32 MeV，而考虑误差的拟合中，\(E_r\)变为 1.20 MeV，\(\Gamma\)变为 0.30 MeV 。可以看出，考虑误差的拟合结果在数值上相对更保守，误差范围也更小。这是因为考虑误差的拟合方法根据数据的不确定性赋予了不同的权重，使得拟合曲线更倾向于靠近误差较小的数据点，从而得到更可靠的参数估计。
 ### 4.2 误差分析
 请讨论实验中可能的误差来源，包括但不限于：
 
 - 数据本身的测量误差
+- 实验过程中，测量仪器的精度限制、环境因素的干扰等都会导致数据存在测量误差。例如，中子探测器的灵敏度波动、能量分辨率有限等，都会影响散射截面和能量测量的准确性。
 - 拟合算法的局限性
+- scipy.optimize.curve_fit函数基于非线性最小二乘法进行拟合，其结果可能受到初始猜测参数的影响。如果初始猜测值远离真实参数值，算法可能陷入局部最优解，导致拟合结果不准确。此外，该算法假设数据误差服从正态分布，若实际情况不满足这一假设，也会影响拟合的可靠性。
 - 模型假设的合理性
+- Breit-Wigner 共振公式是一个简化的理论模型，实际的原子核中子共振散射过程可能受到多种复杂因素的影响，如多体效应、能级间的相互作用等。当这些因素不能被忽略时，模型与实际数据之间存在偏差，从而引入误差。
 ### 4.3 思考题
 1. 考虑误差的拟合方法在什么情况下特别重要？为什么？
-2. 如何评估拟合结果的可靠性？有哪些统计指标可以帮助判断拟合质量？
-
+ 考虑误差的拟合方法在数据测量误差较大且不均匀的情况下特别重要。因为在这种情况下，不考虑误差的拟合会将所有数据点同等对待，可能导致拟合曲线被误差较大的数据点所主导，从而偏离真实的物理关系。而考虑误差的拟合方法能够根据数据的不确定性合理分配权重，使得拟合结果更能反映数据的真实特征，得到更可靠的参数估计。
+3. 如何评估拟合结果的可靠性？有哪些统计指标可以帮助判断拟合质量？
+决定系数（\(R^2\)）：衡量拟合曲线对数据的拟合优度，\(R^2\)越接近 1，表示拟合效果越好。
+均方根误差（RMSE）：反映拟合值与真实值之间的平均误差，RMSE 越小，说明拟合结果越准确。
+卡方统计量（\(\chi^2\)）：用于检验模型与数据的一致性，在合理的假设下，\(\chi^2\)值应接近自由度，若\(\chi^2\)值过大或过小，都表明模型可能存在问题。
 ## 5. 结论
 请总结本次实验的主要发现和收获，特别是对Breit-Wigner共振公式和误差处理在数据拟合中作用的理解。
-
+通过本次实验，成功掌握了 Breit-Wigner 共振公式拟合的基本方法，理解了该公式在描述原子核中子共振散射过程中的物理意义。学会了使用scipy.optimize.curve_fit函数进行数据拟合，并对比了考虑误差和不考虑误差两种拟合方法的结果差异。发现考虑误差的拟合方法能够更准确地反映数据的真实特征，在数据存在较大不确定性时具有重要意义。
 ## 6. 参考文献
 请列出你在实验过程中参考的文献、书籍或网站。(可选)
