--- a/细菌生长实验数据拟合/实验报告.md
+++ b/细菌生长实验数据拟合/实验报告.md
@@ -36,19 +36,16 @@ W (t) 模型：用于描述 β- 半乳糖苷酶合成的动力学过程，表达
 
 请在此处填写你拟合得到的参数及其误差：
 
-**V(t)模型拟合结果**:
-τ = [填写拟合值] ± [填写误差]
+V(t)模型拟合参数：τ=3.428±0.070
+W(t)模型拟合参数：A=0.039±0.006，T=2.483±0.328
 
-**W(t)模型拟合结果**:
-
-A = [填写拟合值] ± [填写误差]
-
-τ = [填写拟合值] ± [填写误差]
 
 
 ### 3.3 拟合曲线图
 
 请在此处插入你绘制的拟合曲线对比图（V(t)和W(t)各一张）。每张图表应包含以下元素：
+![image](https://github.com/user-attachments/assets/dbcdbf01-d99b-4ba8-aeba-a7be70c3237d)
+![image](https://github.com/user-attachments/assets/bc6dd6c7-7022-4ac6-b139-b0ef9b6642f0)
 
 - 实验数据点
 - 最佳拟合曲线
