--- a/Supernova_Hubble_Fitting/实验报告.md
+++ b/Supernova_Hubble_Fitting/实验报告.md
@@ -36,12 +36,13 @@
 请在此处填写你拟合得到的哈勃常数及其误差：
 H0 = [68.23] ± [1.25] km/s/Mpc
 ```
-H0 = [填写拟合值] ± [填写误差] km/s/Mpc
+拟合得到的哈勃常数: H0 = 66.05 ± 0.31 km/s/Mpc
 ```
 
 ### 3.3 哈勃图
 
 请在此处插入你绘制的哈勃图（距离模数vs红移）。图表应包含以下元素：
+![image](https://github.com/user-attachments/assets/13302b92-a85e-40da-8658-92a60e3f8e02)
 
 - 数据点（带误差棒）
 - 最佳拟合曲线
